# Proyecto_Raytracing

./: .Makefile.swp  Advanced_Raytracer  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Cylinder.cpp  Cylinder.h  Light.cpp  Light.h  Makefile  Object.cpp  Object.h  Plane.cpp  Plane.h  README.md  RGBType.cpp  RGBType.h  Ray.cpp  Ray.h  Source.cpp  Source.h  Sphere.cpp  Sphere.h  Utils.h  Vector3D.cpp  Vector3D.h  execute.sh  main.cpp
